[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
awc = "3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
